[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Vec4"
version = "0.1.0"
description = "Four-vector and momentum utilities with NumPy/Torch backend"
authors = [
    { name = "Zak Lawrence", email = "zlawrence97@outlook.com" }
]
dependencies = [
    "numpy",
    "torch"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/ZakLawrence/Vec4"